chore: add new operations to operations api
Also fixed bug in getting permitted apps
